<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingBottom="10dp"
    android:background="@drawable/home_background"
    tools:context=".AboutActivity">

    <RelativeLayout
        android:id="@+id/aboutScrollViewRelLay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/appNameLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/appname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/year_textview"
                android:textSize="19sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/appIconimageView"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/problemsAndSuggestionsTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/appIconimageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/problems_and_suggestions"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/mailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/problemsAndSuggestionsTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/andrea_twitter" />

        <TextView
            android:id="@+id/stefanoMailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/mailTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/stefano_twitter" />

        <TextView
            android:id="@+id/websiteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/stefanoMailTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/website_textView"
            android:textSize="19sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/myWebsiteTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/websiteTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/my_website" />


        <TextView
            android:id="@+id/librariesTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/libraries_used"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_below="@+id/myWebsiteTextView" />

        <TextView
            android:id="@+id/twitter4jTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/librariesTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/twitter4j_link" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/twitter4jTextView"
            android:id="@+id/CaldroidTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/Caldroid_link"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/CaldroidTextView"
            android:id="@+id/roundedImageViewTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/rounded_image_view_link"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/roundedImageViewTextView"
            android:id="@+id/TwitterOAuthViewTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/twitter_oauth_view_link"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/TwitterOAuthViewTextView"
            android:id="@+id/androidUniversalImageLoader"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/android_universal_image_loader_link"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/androidUniversalImageLoader"
            android:id="@+id/preferenceFragmentCompatTextView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/preference_fragment_compat_link"/>
    </RelativeLayout>

</ScrollView>