<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.andreapivetta.tweetbooster.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tweetMaiusc"
        android:id="@+id/textView"
        android:textColor="@color/white"
        android:textSize="54sp"
        android:gravity="right"
        android:fontFamily="sans-serif-light"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="63dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:gravity="start"
        android:id="@+id/textView3"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-thin"
        android:layout_below="@+id/textView"
        android:textSize="25sp"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loginImageView"
        android:background="@drawable/login_layer"
        android:text="@string/login_button_text"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingRight="10dp"
        android:paddingEnd="10dp"
        android:paddingLeft="60dp"
        android:paddingStart="60dp"
        android:textSize="20sp"
        android:textColor="@color/caldroid_black"
        android:fontFamily="sans-serif-thin"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
